--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.2
+backports.zoneinfo==0.2.1
 certifi==2022.6.15
 charset-normalizer==2.1.1
 coreapi==2.3.3
@@ -7,17 +8,24 @@ dj-database-url==1.0.0
 Django==3.2.15
 django-ckeditor==6.5.0
 django-cors-headers==3.13.0
+django-dotenv==1.4.2
+django-filter==22.1
 django-heroku==0.3.1
 django-js-asset==2.0.0
+django-modeltranslation==0.18.4
+django-rest-swagger==2.2.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 drf-yasg==1.21.3
 gunicorn==20.1.0
 idna==3.3
+importlib-metadata==4.12.0
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
+Markdown==3.4.1
 MarkupSafe==2.1.1
+openapi-codec==1.3.2
 packaging==21.3
 Pillow==9.2.0
 psycopg2==2.9.3
@@ -27,7 +35,9 @@ pytz==2022.2.1
 requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
+simplejson==3.17.6
 sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.12
 whitenoise==6.2.0
+zipp==3.8.1
