--- a/requirements.txt
+++ b/requirements.txt
@@ -8,36 +8,33 @@ dj-database-url==1.0.0
 Django==3.2.15
 django-ckeditor==6.5.0
 django-cors-headers==3.13.0
+django-csp==3.7
+django-cuser==2017.3.16
 django-dotenv==1.4.2
 django-filter==22.1
-django-heroku==0.3.1
 django-js-asset==2.0.0
-django-modeltranslation==0.18.4
-django-rest-swagger==2.2.0
-djangorestframework==3.13.1
-djangorestframework-simplejwt==5.2.0
-drf-yasg==1.21.3
-gunicorn==20.1.0
+django-modeltranslation==0.18.7
+django-tinymce==3.5.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+drf-yasg==1.21.4
 idna==3.3
-importlib-metadata==4.12.0
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
-Markdown==3.4.1
 MarkupSafe==2.1.1
-openapi-codec==1.3.2
+modeltranslation==0.25
 packaging==21.3
-Pillow==9.2.0
-psycopg2==2.9.3
-PyJWT==2.4.0
+PyJWT==2.6.0
 pyparsing==3.0.9
 pytz==2022.2.1
 requests==2.28.1
 ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.6
-simplejson==3.17.6
+ruamel.yaml.clib==0.2.7
 sqlparse==0.4.2
+style==1.1.0
+typing-extensions==4.4.0
+update==0.0.1
 uritemplate==4.1.1
 urllib3==1.26.12
 whitenoise==6.2.0
-zipp==3.8.1
