--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,137 @@
+acme==1.1.0
+aiogram==2.23.1
+aiohttp==3.8.3
+aiosignal==1.3.1
+appdirs==1.4.3
+apturl==0.5.2
 asgiref==3.5.2
+async-timeout==4.0.2
+attrs==22.1.0
+Babel==2.9.1
 backports.zoneinfo==0.2.1
-certifi==2022.6.15
+bcrypt==3.1.7
+blinker==1.4
+Brlapi==0.7.0
+certbot==0.40.0
+certifi==2022.9.24
+chardet==3.0.4
 charset-normalizer==2.1.1
+Click==7.0
+colorama==0.4.3
+command-not-found==0.3
+ConfigArgParse==0.13.0
+configobj==5.0.6
 coreapi==2.3.3
 coreschema==0.0.4
-dj-database-url==1.0.0
-Django==3.2.15
-django-ckeditor==6.5.0
+cryptography==2.8
+cupshelpers==1.0
+dbus-python==1.2.16
+defer==1.0.6
+distlib==0.3.0
+distro==1.4.0
+distro-info===0.23ubuntu1
+Django==4.1.2
+django-ckeditor==6.5.1
 django-cors-headers==3.13.0
-django-csp==3.7
-django-cuser==2017.3.16
-django-dotenv==1.4.2
-django-filter==22.1
 django-js-asset==2.0.0
 django-modeltranslation==0.18.7
-django-tinymce==3.5.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.4
-idna==3.3
+duplicity==0.8.12.0
+entrypoints==0.3
+fasteners==0.14.1
+filelock==3.0.12
+frozenlist==1.3.3
+future==0.18.2
+googletrans==3.1.0a0
+gunicorn==20.1.0
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2022.11.1
+httpcore==0.9.1
+httplib2==0.14.0
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.10
+importlib-metadata==1.5.0
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
+josepy==1.2.0
+json-extract==1.1.2
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lockfile==0.12.2
+louis==3.12.0
+macaroonbakery==1.3.1
+magic-filter==1.0.9
+Mako==1.1.0
 MarkupSafe==2.1.1
-modeltranslation==0.25
+mock==3.0.5
+monotonic==1.5
+more-itertools==4.2.0
+multidict==6.0.2
+netifaces==0.10.4
+oauthlib==3.1.0
+olefile==0.46
 packaging==21.3
+paramiko==2.6.0
+parsedatetime==2.4
+pbr==5.4.5
+pexpect==4.6.0
+Pillow==9.3.0
+protobuf==3.6.1
+psycopg2-binary==2.9.5
+pycairo==1.16.2
+pycups==1.9.73
+PyGObject==3.36.0
+PyICU==2.4.2
 PyJWT==2.6.0
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
 pyparsing==3.0.9
-pytz==2022.2.1
+pyRFC3339==1.1
+python-apt==2.0.0+ubuntu0.20.4.8
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+pytz==2022.5
+pyxdg==0.26
+PyYAML==5.3.1
+reportlab==3.5.34
 requests==2.28.1
+requests-toolbelt==0.8.0
+requests-unixsocket==0.2.0
+rfc3986==1.5.0
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
-sqlparse==0.4.2
-style==1.1.0
-typing-extensions==4.4.0
-update==0.0.1
+SecretStorage==2.3.1
+simplejson==3.16.0
+six==1.14.0
+sniffio==1.3.0
+sqlparse==0.4.3
+systemd-python==234
+testresources==2.0.1
+typing_extensions==4.4.0
+ubuntu-advantage-tools==27.11.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
 uritemplate==4.1.1
 urllib3==1.26.12
+usb-creator==0.3.7
+virtualenv==20.0.17
+wadllib==1.3.3
 whitenoise==6.2.0
+xkit==0.0.0
+yarl==1.8.1
+zipp==1.0.0
+zope.component==4.3.0
+zope.event==4.4
+zope.hookable==5.0.0
+zope.interface==4.7.1
